--- a/docs/OSCP practice exam/6. Sense.md
+++ b/docs/OSCP practice exam/6. Sense.md
@@ -31,6 +31,54 @@ Findings from the scan.
 └─$ cat */*ferox* | grep -E '^200' | sort -u                                                                                                                                 200       10l       40w      271c https://10.10.10.60/changelog.txt                                                                                                          200      173l      425w        0c https://10.10.10.60/                                                                                                                       200      173l      425w        0c https://10.10.10.60/edit.php                                                                                                               200      173l      425w        0c https://10.10.10.60/exec.php                                                                                                               200      173l      425w        0c https://10.10.10.60/graph.php                                                                                                              200      173l      425w        0c https://10.10.10.60/help.php                                                                                                               200      173l      425w        0c https://10.10.10.60/index.php                                                                                                              200      173l      425w        0c https://10.10.10.60/interfaces.php                                                                                                         200      173l      425w        0c https://10.10.10.60/license.php                                                                                                            200      173l      425w        0c https://10.10.10.60/pkg.php                                                                                                                200      173l      425w        0c https://10.10.10.60/stats.php                                                                                                              200      173l      425w        0c https://10.10.10.60/status.php                                                                                                             200      173l      425w        0c https://10.10.10.60/system.php                                                                                                             200      173l      425w        0c https://10.10.10.60/wizard.php                                                                                                             200       17l       26w      384c https://10.10.10.60/xmlrpc.php                                                                                                             200       24l       32w      329c https://10.10.10.60/index.html                                                                                                             200        7l       24w     1406c https://10.10.10.60/favicon.ico 
 ```
 
+Most of those pages were behind a login page. I could only access
+- `changelog.txt` - which mentions a recent patch FAILED, only patches 2 of 3 vulnerabilities.
 ![[Pasted image 20220203173133.png]]
 
+- `xmlrpc.php` - which shows some XML error (probably because I'm doing a get request and it's expecting a POST with some command.)
+![[Pasted image 20220203175941.png]]
+Following [HackTricks guide to xmlrpc](https://book.hacktricks.xyz/pentesting/pentesting-web/wordpress#xml-rpc) I was able to get a list of valid commands. This can be used to brute-force creds if needed.
+
+
+Do a POST with this payload:
+```xml
+<methodCall>
+<methodName>system.listMethods</methodName>
+<params></params>
+</methodCall>
+```
+
+![[Pasted image 20220203182332.png]]
+
+While researching how to use pfsense's XMLRPC, I came across [this exploit](https://packetstormsecurity.com/files/154587/pfSense-2.3.4-2.4.4-p3-Remote-Code-Injection.html). The exploit requires credentials, but **grants RCE**.
+
+It looks like the exploit is using this XML payload to check the credential (only password I guess?).
+```XML
+<?xml version='1.0' encoding='iso-8859-1'?>"
+<methodCall>
+<methodName>pfsense.host_firmware_version</methodName>
+<params>
+<param><value><string>PASSWORD_HERE</string></value></param>
+</params>
+</methodCall>
+```
+So I will check this, and brute-force if possible.
+
+![[Pasted image 20220203183754.png]]
+
+Appears to be working! (Incorrect password)
+
+![[Pasted image 20220203183855.png]]
+
+Now for the brute-force....
+Well, that was short lived. 75 requests worked, but now everything is timing out. In fact, it appears the whole webserver is down now. Wait....duh....my IP is probably deny-listed 
+
+:'(
+
+Reverting...Will have to do something different for the brute-force attack. I could try the name of the box as the password...
+
+
+
+- `index.html` - which has a link to install Dragon Fly BSD
+![[Pasted image 20220203180039.png]]
 
