--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -93,3 +93,7 @@ Started scan 6/6 - going to take a long break/nap and hopefully come back ready 
 
 I'm back to it. Had a good nap, ate some snacks. I'm not super excited to do this, but I'm ready.
 
+### 6:47 pm
+
+Finally feel like I'm back in a groove. After my nap, the kids got home for the day, we had dinner together, and it took me a minute to get back into a flow state. Good to go now tho! May have to keep at it all night...approaching the 12 hour mark with no points yet :)
+
