--- a/docs/OSCP practice exam/6. Sense.md
+++ b/docs/OSCP practice exam/6. Sense.md
@@ -50,7 +50,7 @@ Do a POST with this payload:
 
 ![[Pasted image 20220203182332.png]]
 
-While researching how to use pfsense's XMLRPC, I came across [this exploit](https://packetstormsecurity.com/files/154587/pfSense-2.3.4-2.4.4-p3-Remote-Code-Injection.html). The exploit requires credentials, but **grants RCE**.
+While researching how to use pfsense's XMLRPC, I came across [this exploit](https://packetstormsecurity.com/files/154587/pfSense-2.3.4-2.4.4-p3-Remote-Code-Injection.html). The exploit requires credentials, but **grants RCE**. More about this weakness at [NVD](https://nvd.nist.gov/vuln/detail/CVE-2019-16701)
 
 It looks like the exploit is using this XML payload to check the credential (only password I guess?).
 ```XML
@@ -77,8 +77,16 @@ Well, that was short lived. 75 requests worked, but now everything is timing out
 
 Reverting...Will have to do something different for the brute-force attack. I could try the name of the box as the password...
 
+Also just noticed, lighttpd has some DOS vulnerability, apparently the requests are just going to quickly for it to handle. If I slow them down maybe my brute force will get past 80 requests :)
+
 
 
 - `index.html` - which has a link to install Dragon Fly BSD
 ![[Pasted image 20220203180039.png]]
+
+
+I crashed the damn thing again....
+Moving to another box, may have to revert this when I come back - sort of jumped right in and skipped enumerating the attack surface, maybe take a step back when I come back to it.
+
+
 
