--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -97,3 +97,8 @@ I'm back to it. Had a good nap, ate some snacks. I'm not super excited to do thi
 
 Finally feel like I'm back in a groove. After my nap, the kids got home for the day, we had dinner together, and it took me a minute to get back into a flow state. Good to go now tho! May have to keep at it all night...approaching the 12 hour mark with no points yet :)
 
+### 8:04 pm
+
+Past the 12 hour mark. Still no points. I just used my metasploit attempt and it failed....gonna go take a break.
+
+
