--- a/docs/OSCP practice exam/1. Cascade.md
+++ b/docs/OSCP practice exam/1. Cascade.md
@@ -95,10 +95,24 @@ Maybe one of the Eternal exploits would work for Initial foothold? Would need to
 ### Exploit planning
 
 1. Check SMB anon login
+	- Nope
 2. Check MS17-010 [EDB-42031](https://www.exploit-db.com/exploits/42031)
+	- Nope
 3. Try LDAP manual enumeration (above)
 
 
 ### PrivEsc Planning
 1. Kerberoast
 2. Check MS16-032
+
+
+## Exploit
+
+Couldn't get EDB-42031 working - it's python 2 and my version of Kali is missing impacket for 2. Tried porting to 3, but I would have to go through and call out the byte strings. THIS NEEDS TO BE ADDRESSED BEFORE THE EXAM! I should probably use an older version of Kali which still has support for python2.
+
+So, I'll be using my ONE metsaploit for this one......SHIT
+
+![[Pasted image 20220203200117.png]]
+
+FML
+![[Pasted image 20220203200330.png]]
