--- a/docs/OSCP practice exam/1. Cascade.md
+++ b/docs/OSCP practice exam/1. Cascade.md
@@ -99,6 +99,8 @@ Maybe one of the Eternal exploits would work for Initial foothold? Would need to
 2. Check MS17-010 [EDB-42031](https://www.exploit-db.com/exploits/42031)
 	- Nope
 3. Try LDAP manual enumeration (above)
+	- Got some users, but nothing major.
+4. `WinRM`! Better dive into this.
 
 
 ### PrivEsc Planning
@@ -108,6 +110,7 @@ Maybe one of the Eternal exploits would work for Initial foothold? Would need to
 
 ## Exploit
 
+### Eternal Blue
 Couldn't get EDB-42031 working - it's python 2 and my version of Kali is missing impacket for 2. Tried porting to 3, but I would have to go through and call out the byte strings. THIS NEEDS TO BE ADDRESSED BEFORE THE EXAM! I should probably use an older version of Kali which still has support for python2.
 
 So, I'll be using my ONE metsaploit for this one......SHIT
@@ -116,3 +119,26 @@ So, I'll be using my ONE metsaploit for this one......SHIT
 
 FML
 ![[Pasted image 20220203200330.png]]
+
+### Playing with LDAP
+
+I was able to [dump everything from LDAP](https://book.hacktricks.xyz/pentesting/pentesting-ldap#manual) with this:
+
+```python3
+>>> import ldap3
+>>> server = ldap3.Server('x.X.x.X', get_info = ldap3.ALL, port =636, use_ssl = True)
+>>> connection = ldap3.Connection(server)
+>>> connection.bind()
+True
+>>> server.info
+```
+
+```python3
+>> connection.search(search_base='DC=DOMAIN,DC=DOMAIN', search_filter='(&(objectClass=person))', search_scope='SUBTREE', attributes='userPassword')
+True
+>>> connection.entries
+```
+
+![[Pasted image 20220203203057.png]]
+
+I should also check if I can [write data](https://book.hacktricks.xyz/pentesting/pentesting-ldap#write-data).
