--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -101,4 +101,8 @@ Finally feel like I'm back in a groove. After my nap, the kids got home for the 
 
 Past the 12 hour mark. Still no points. I just used my metasploit attempt and it failed....gonna go take a break.
 
+### 10:32 pm
+
+Time for another break. I got 10 points! YAY
+
 
