--- a/docs/OSCP practice exam/1. Cascade.md
+++ b/docs/OSCP practice exam/1. Cascade.md
@@ -142,3 +142,9 @@ True
 ![[Pasted image 20220203203057.png]]
 
 I should also check if I can [write data](https://book.hacktricks.xyz/pentesting/pentesting-ldap#write-data).
+
+
+### WinRM
+
+Will follow [this WinRM Hacking Guide](https://book.hacktricks.xyz/pentesting/5985-5986-pentesting-winrm)
+
