--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -106,3 +106,6 @@ Past the 12 hour mark. Still no points. I just used my metasploit attempt and it
 Time for another break. I got 10 points! YAY
 
 
+### 11:00 pm
+
+I'm back now, got some energy drinks and chips...Looks like tonight is going to be an all-nighter, havn't done this in a while.
