--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -109,3 +109,8 @@ Time for another break. I got 10 points! YAY
 ### 11:00 pm
 
 I'm back now, got some energy drinks and chips...Looks like tonight is going to be an all-nighter, havn't done this in a while.
+
+### 12:04 pm
+
+2 monsters in, I've nearly exhausted all optoins for PE on the machine I got user on. Going to try one more thing then move on to the next machine. Break time (waiting for results from exploit suggester anyhow)
+
