--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -115,3 +115,7 @@ I'm back now, got some energy drinks and chips...Looks like tonight is going to 
 2 monsters in, I've nearly exhausted all optoins for PE on the machine I got user on. Going to try one more thing then move on to the next machine. Break time (waiting for results from exploit suggester anyhow)
 
 Came back not even 10 mins later... back to windows PrivEsc :)
+
+### 12:59 pm
+
+Time for another break. The monsters are kicking in, good thing I didn't have any more.
