--- a/docs/OSCP practice exam/3. Cronos.md
+++ b/docs/OSCP practice exam/3. Cronos.md
@@ -37,4 +37,22 @@ This box also has a webserver:
 		
 ### Public Explotis
 
+apache
 ![[Pasted image 20220203101658.png]]
+bind
+![[Pasted image 20220204004528.png]]
+
+## Exploitation
+
+Will be following [HackTricks DNS guide](https://book.hacktricks.xyz/pentesting/pentesting-dns)
+
+Did a zone transfer!
+![[Pasted image 20220204005320.png]]
+
+I added cronos to `/etc/hosts` and am able to see other sites now.
+
+
+![[Pasted image 20220204005738.png]]
+
+Going to rescan and take another break.
+
