--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -119,3 +119,10 @@ Came back not even 10 mins later... back to windows PrivEsc :)
 ### 12:59 pm
 
 Time for another break. The monsters are kicking in, good thing I didn't have any more.
+
+### 2:13 am
+
+Got another 10 points by getting `user` on cronos. So now I'm at 20! 20% of the way there with 5 hours left.
+
+
+
