--- a/docs/OSCP practice exam/3. Cronos.md
+++ b/docs/OSCP practice exam/3. Cronos.md
@@ -56,3 +56,21 @@ I added cronos to `/etc/hosts` and am able to see other sites now.
 
 Going to rescan and take another break.
 
+Found some pages on the newly found site:
+![[Pasted image 20220204011730.png]]
+
+Some more public exploits
+![[Pasted image 20220204013953.png]]
+
+Added `admin.cronos.htb` to hosts.
+
+![[Pasted image 20220204014240.png]]
+
+Got in with some SQL injection
+![[Pasted image 20220204020244.png]]
+![[Pasted image 20220204020311.png]]
+
+
+## User Flag!
+`51d236438b333970dbba7dc3089be33b`
+![[Pasted image 20220204021240.png]]
