--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -124,5 +124,6 @@ Time for another break. The monsters are kicking in, good thing I didn't have an
 
 Got another 10 points by getting `user` on cronos. So now I'm at 20! 20% of the way there with 5 hours left.
 
+### 2:50 am
 
-
+Got another 10 points by getting `root` on cronos. Total points now 30
