--- a/docs/OSCP practice exam/3. Cronos.md
+++ b/docs/OSCP practice exam/3. Cronos.md
@@ -73,4 +73,47 @@ Got in with some SQL injection
 
 ## User Flag!
 `51d236438b333970dbba7dc3089be33b`
+
 ![[Pasted image 20220204021240.png]]
+
+
+uname -a
+
+![[Pasted image 20220204021557.png]]
+
+Getting shell
+Using PentestMonkey's reverse php webshell.
+![[Pasted image 20220204022732.png]]
+
+
+Don't need this anymore, but I found it and thought it would be cool to include
+![[Pasted image 20220204023003.png]]
+
+Uploaded webshell
+![[Pasted image 20220204023116.png]]
+
+Start listener, and execute!
+
+![[Pasted image 20220204023211.png]]
+
+## PrivEsc
+
+Found a few options for privesc on `linux kernel 4.4.0-72`
+This one ended up working [EDB-44298](https://www.exploit-db.com/exploits/44298)
+
+Compiled on kali
+```bash
+gcc 44298.c -o pwn
+```
+
+Copy exploit and make executable.
+
+![[Pasted image 20220204024749.png]]
+
+Execute to get root
+
+![[Pasted image 20220204024814.png]]
+
+### Root Flag
+`1703b8a3c9a8dde879942c79d02fd3a0 `
+![[Pasted image 20220204024828.png]]
