--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -126,4 +126,6 @@ Got another 10 points by getting `user` on cronos. So now I'm at 20! 20% of the 
 
 ### 2:50 am
 
-Got another 10 points by getting `root` on cronos. Total points now 30
+Got another 10 points by getting `root` on cronos. Total points now 30.
+
+Taking another break....and another Monster.
