--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -129,3 +129,8 @@ Got another 10 points by getting `user` on cronos. So now I'm at 20! 20% of the 
 Got another 10 points by getting `root` on cronos. Total points now 30.
 
 Taking another break....and another Monster.
+
+### 3:10 am
+
+back to it....I'm getting really tired. This was wayyy easier in highschool :D
+
