--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -134,3 +134,11 @@ Taking another break....and another Monster.
 
 back to it....I'm getting really tired. This was wayyy easier in highschool :D
 
+### 8:07 am
+
+Well, I crashed and just woke up. I feel ROUGH. No only did I fall asleep, but I wouldn't even have enough points to make the report worth it. I did lose quite a bit of time from the scanning fiasco...so I'm going to keep at it until 11am to see how I would have done without the lost time for re-scanning.
+
+But first, I need to recover.
+
+![[Pasted image 20220204081632.png]]
+
