--- a/docs/OSCP practice exam/4. Forest.md
+++ b/docs/OSCP practice exam/4. Forest.md
@@ -25,6 +25,7 @@ This one is also running Active Directory
 SMB?
 - 139: Netbios-ssn
 	- Anon login
+		- Nope
 - Various ports serving RPC
 
 Other
@@ -54,3 +55,10 @@ Here is a list of users with enabled accounts:
 
 Didn't find any.
 
+Maybe I can brute force the users
+
+```bash
+crackmapexec winrm 10.10.10.161 -d htb.local -u users.txt -p /usr/share/seclists/Passwords/darkweb2017-top100.txt
+```
+
+The domain is `htb.local`
