--- a/docs/OSCP practice exam/6. Sense.md
+++ b/docs/OSCP practice exam/6. Sense.md
@@ -88,5 +88,48 @@ Also just noticed, lighttpd has some DOS vulnerability, apparently the requests 
 I crashed the damn thing again....
 Moving to another box, may have to revert this when I come back - sort of jumped right in and skipped enumerating the attack surface, maybe take a step back when I come back to it.
 
+After reverting, and scouring the internet, the above screenshot seems to be tied to v 2.1.5 of pfsense.
+
+![[Pasted image 20220204084646.png]]]
+
+After reviewing the exploits on here, I've come full circle. I'm back at the XMLRPC exploit, but I still need credentials. Maybe I can modify the python exploit to brute force as well.
+
+Downloading [this exploit](https://dl.packetstormsecurity.net/1909-exploits/pfsense-remote-code-injection.txt)
+
+Split the file: lines 1-90 in `info.txt` and 91+ in `pfsense-rce.py`
+
+This still isn't working.....maybe I can bypass the session thing on longin page using burp. I found some notes about using Intruder to update dynamic session values during a brute force, this may be the ticket.
+
+### Identifying changing values
+
+#### Reply 31
+set `cookie_test`
+![[Pasted image 20220204104146.png]]
+set `__csrf_magic`
+![[Pasted image 20220204104307.png]]
+
+#### Request 32
+updated `cookie_test`
+![[Pasted image 20220204104426.png]]
+updated`__csrf_magic`
+![[Pasted image 20220204104504.png]]
+is URL encoded
+
+Using Burp Intruder, with the following positions set, username is always `admin`:
 
 
+![[Pasted image 20220204104836.png]]
+
+Then set up Grep - Extract in Options to get around the session management:
+![[Pasted image 20220204105447.png]]
+
+Now to set payloads:
+![[Pasted image 20220204105616.png]]
+Note: for payload 2, I've added `,` to the Payload Encoding char list. 
+![[Pasted image 20220204105758.png]]
+
+For the wordlist, I've decided to use `rockyou.txt` - this has stalled burp while it loads
+
+![[Pasted image 20220204110232.png]]
+
+Times up....
