--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -142,3 +142,29 @@ But first, I need to recover.
 
 ![[Pasted image 20220204081632.png]]
 
+
+### 11:03 am
+
+Well, it's official. My extended time is up and I haven't managed any more points. I'm still exhausted. I finished with 30 points, which means I would need to spend more money on a retake if this were the real exam.
+
+
+# Lessons Learned.
+- Validate your scanner is running before walking away. Don't assume it's working. You may not be connected to VPN.
+- Pomodoro is helpful, but I need to be more disiplined on the length of breaks. During this test exam I started losing interest quickly. I'm not sure if I over-relaxed to avoid anxiety or what. It doesn't seem like burnout - today as the end got closer I got more and more pumped. Maybe I should be setting more rigorous SHORT TERM GOALS to keep me engaged. 24 hours is a long time to be engaged, and I felt myself having a procrastination mindset pretty early on.
+- Get good sleep the night before. I saw this one online but ended up not following through.
+- I have no idea what's going on with Active Directory
+- Don't jump right in to credential stuffing; you could tip over the server. Also be sure to account for dynamic cookies; JUST USE BURP.
+
+
+That's it for now. I don't even have enough points to make the report worth while, so I'll finish up these boxes, add more to lessons learned, and then possibly do a report.
+
+
+Will need to study some AD hacking techniques.
+
+Then I suppose I should do another practice exam :)
+
+
+
+TTFN for now, guess I'll have to [try harder](https://www.offensive-security.com/offsec/say-try-harder/) <- great tune
+
+![[Pasted image 20220204112648.png]]
