--- a/docs/OSCP practice exam/6. Sense.md
+++ b/docs/OSCP practice exam/6. Sense.md
@@ -132,4 +132,8 @@ For the wordlist, I've decided to use `rockyou.txt` - this has stalled burp whil
 
 ![[Pasted image 20220204110232.png]]
 
+Trying to run this is causing my CPU to spike pretty heavily
+- ![[Pasted image 20220204110635.png]]
+- 
+
 Times up....
